--- a/service-details.html
+++ b/service-details.html
@@ -4,18 +4,18 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Service Details - FolioOne Bootstrap Template</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <title>Service Details - Reagan Ochola | Data Analytics & MEL Specialist</title>
+  <meta name="description" content="Professional services offered by Reagan Ochola - Data Analytics & MEL Specialist specializing in agricultural data, Power BI dashboards, and quantitative analysis for development organizations.">
+  <meta name="keywords" content="MEL Services, Data Analytics, Agriculture, Power BI, SQL, Consulting, Kenya, East Africa">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
-  <link href="https://fonts.googleapis.com" rel="preconnect">
-  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com " rel="preconnect">
+  <link href="https://fonts.gstatic.com " rel="preconnect" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital ,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -29,10 +29,10 @@
 
   <!-- =======================================================
   * Template Name: FolioOne
-  * Template URL: https://bootstrapmade.com/folioone-bootstrap-portfolio-website-template/
+  * Template URL: https://bootstrapmade.com/folioone-bootstrap-portfolio-website-template/ 
   * Updated: Aug 23 2025 with Bootstrap v5.3.7
   * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
+  * License: https://bootstrapmade.com/license/ 
   ======================================================== -->
 </head>
 
@@ -79,7 +79,7 @@
         <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
         <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
         <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/reagan-ochola-aba10927" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
 
     </div>
@@ -93,7 +93,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Service Details</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium totam rem aperiam</p>
+        <p>Comprehensive data analytics and MEL consulting services designed to transform agricultural operations and improve farmer outcomes across East Africa.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -106,57 +106,57 @@
             <!-- Hero Service Introduction -->
             <div class="service-hero" data-aos="fade-up" data-aos-delay="100">
               <div class="service-meta">
-                <span class="service-category">Strategic Consulting</span>
-                <span class="reading-time">5 min read</span>
+                <span class="service-category">Agricultural Data Analytics</span>
+                <span class="reading-time">8 min read</span>
               </div>
-              <h1>Business Process Optimization</h1>
-              <p class="service-description">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae mauris viverra.</p>
+              <h1>Agricultural Data Analytics & MEL Consulting</h1>
+              <p class="service-description">Transform raw field data into actionable intelligence that improves farmer outcomes, optimizes operations, and scales impact across agricultural development programs.</p>
             </div>
 
             <!-- Service Visual -->
             <div class="service-visual" data-aos="zoom-in" data-aos-delay="200">
-              <img src="assets/img/services/services-7.webp" alt="Business Process Optimization" class="img-fluid">
+              <img src="assets/img/services/services-7.webp" alt="Agricultural Data Analytics" class="img-fluid">
             </div>
 
             <!-- Service Content -->
             <div class="service-narrative" data-aos="fade-up" data-aos-delay="300">
-              <h3>Transform Your Operations</h3>
-              <p>Donec rutrum congue leo eget malesuada. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Cras ultricies ligula sed magna dictum porta.</p>
+              <h3>Empowering Agricultural Decisions Through Data</h3>
+              <p>With over 8 years of experience in Monitoring, Evaluation & Learning (MEL) at One Acre Fund, I specialize in building and managing data systems that directly support smallholder farmers across East Africa. My expertise bridges the gap between complex agricultural data and practical, actionable insights that drive program success.</p>
 
-              <p>Sed porttitor lectus nibh. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec sollicitudin molestie malesuada.</p>
+              <p>From leading field data collection teams of 50+ staff to designing real-time Power BI dashboards, my work ensures that agricultural leaders make decisions based on accurate, timely, and actionable information. I help organizations establish quality control systems, reduce survey errors, and create comprehensive monitoring frameworks that improve farmer outcomes.</p>
 
               <!-- Key Benefits Grid -->
               <div class="benefits-grid" data-aos="fade-up" data-aos-delay="400">
                 <div class="benefit-card">
                   <div class="benefit-icon">
-                    <i class="bi bi-lightning-charge"></i>
+                    <i class="bi bi-graph-up"></i>
                   </div>
-                  <h4>Efficiency Boost</h4>
-                  <p>Curabitur arcu erat accumsan id imperdiet et porttitor at sem.</p>
+                  <h4>Data-Driven Decisions</h4>
+                  <p>Transform raw agricultural data into actionable insights that improve farmer outcomes and program effectiveness.</p>
                 </div>
 
                 <div class="benefit-card">
                   <div class="benefit-icon">
                     <i class="bi bi-shield-check"></i>
                   </div>
-                  <h4>Risk Mitigation</h4>
-                  <p>Pellentesque in ipsum id orci porta dapibus vestibulum ante ipsum.</p>
+                  <h4>Quality Assurance</h4>
+                  <p>Establish robust data validation frameworks that reduce survey errors by up to 35% and ensure data reliability.</p>
                 </div>
 
                 <div class="benefit-card">
                   <div class="benefit-icon">
-                    <i class="bi bi-graph-up"></i>
+                    <i class="bi bi-speedometer2"></i>
                   </div>
-                  <h4>Growth Acceleration</h4>
-                  <p>Vivamus suscipit tortor eget felis porttitor volutpat mauris blandit.</p>
+                  <h4>Real-Time Monitoring</h4>
+                  <p>Deploy interactive dashboards that enable real-time tracking of crop adoption, repayment rates, and farmer performance.</p>
                 </div>
 
                 <div class="benefit-card">
                   <div class="benefit-icon">
                     <i class="bi bi-people"></i>
                   </div>
-                  <h4>Team Alignment</h4>
-                  <p>Donec rutrum congue leo eget malesuada vivamus magna justo lacinia.</p>
+                  <h4>Capacity Building</h4>
+                  <p>Mentor teams on advanced data tools and analytical techniques for sustainable data-driven decision making.</p>
                 </div>
               </div>
 
@@ -171,8 +171,8 @@
                     <span>1</span>
                   </div>
                   <div class="timeline-content">
-                    <h4>Discovery &amp; Assessment</h4>
-                    <p>Comprehensive analysis of current processes and identification of optimization opportunities.</p>
+                    <h4>Data Assessment & Strategy</h4>
+                    <p>Comprehensive evaluation of existing data systems, identification of gaps, and development of customized analytics strategy.</p>
                     <small>Week 1-2</small>
                   </div>
                 </div>
@@ -182,9 +182,9 @@
                     <span>2</span>
                   </div>
                   <div class="timeline-content">
-                    <h4>Strategic Planning</h4>
-                    <p>Development of customized optimization roadmap with clear milestones and success metrics.</p>
-                    <small>Week 3-4</small>
+                    <h4>System Design & Development</h4>
+                    <p>Design and implementation of data collection frameworks, validation systems, and dashboard architecture.</p>
+                    <small>Week 3-6</small>
                   </div>
                 </div>
 
@@ -193,9 +193,9 @@
                     <span>3</span>
                   </div>
                   <div class="timeline-content">
-                    <h4>Implementation</h4>
-                    <p>Systematic rollout of process improvements with continuous monitoring and adjustment.</p>
-                    <small>Week 5-12</small>
+                    <h4>Dashboard Deployment</h4>
+                    <p>Launch of interactive Power BI dashboards with real-time data integration and user training sessions.</p>
+                    <small>Week 7-10</small>
                   </div>
                 </div>
 
@@ -204,9 +204,9 @@
                     <span>4</span>
                   </div>
                   <div class="timeline-content">
-                    <h4>Optimization &amp; Scale</h4>
-                    <p>Fine-tuning of implemented solutions and preparation for organization-wide scaling.</p>
-                    <small>Week 13-16</small>
+                    <h4>Training & Optimization</h4>
+                    <p>Comprehensive team training, system optimization, and establishment of sustainable data management practices.</p>
+                    <small>Week 11-12</small>
                   </div>
                 </div>
               </div>
@@ -225,31 +225,35 @@
                 </div>
                 <div class="overview-stats">
                   <div class="stat-item">
-                    <div class="stat-number">16</div>
-                    <div class="stat-label">Weeks Duration</div>
+                    <div class="stat-number">8+</div>
+                    <div class="stat-label">Years Experience</div>
                   </div>
                   <div class="stat-item">
-                    <div class="stat-number">85%</div>
-                    <div class="stat-label">Efficiency Gain</div>
+                    <div class="stat-number">50+</div>
+                    <div class="stat-label">Staff Managed</div>
                   </div>
                   <div class="stat-item">
-                    <div class="stat-number">24/7</div>
-                    <div class="stat-label">Support Access</div>
+                    <div class="stat-number">35%</div>
+                    <div class="stat-label">Error Reduction</div>
                   </div>
                 </div>
 
                 <div class="overview-details">
                   <div class="detail-row">
                     <span class="detail-label">Investment Range</span>
-                    <span class="detail-value">$15K - $45K</span>
+                    <span class="detail-value">$5K - $25K</span>
                   </div>
                   <div class="detail-row">
-                    <span class="detail-label">Team Composition</span>
-                    <span class="detail-value">3-5 Specialists</span>
+                    <span class="detail-label">Project Duration</span>
+                    <span class="detail-value">8-12 Weeks</span>
                   </div>
                   <div class="detail-row">
                     <span class="detail-label">Industries Served</span>
-                    <span class="detail-value">Manufacturing, Tech, Finance</span>
+                    <span class="detail-value">Agriculture, Development, NGOs</span>
+                  </div>
+                  <div class="detail-row">
+                    <span class="detail-label">Geographic Focus</span>
+                    <span class="detail-value">East Africa</span>
                   </div>
                 </div>
               </div>
@@ -257,24 +261,24 @@
               <!-- Client Success Story -->
               <div class="success-story">
                 <div class="story-quote">
-                  <p>"Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas."</p>
+                  <p>"Reagan's leadership in establishing our data validation frameworks has been transformative. The 35% reduction in survey errors directly improved our farmer support strategies and program outcomes."</p>
                 </div>
                 <div class="story-author">
-                  <img src="assets/img/person/person-m-8.webp" alt="Michael Chen" class="author-avatar">
+                  <img src="assets/img/person/person-m-8.webp" alt="Senior Manager" class="author-avatar">
                   <div class="author-details">
-                    <h5>Michael Chen</h5>
+                    <h5>Senior Manager</h5>
                     <span>Operations Director</span>
-                    <small>TechCorp Industries</small>
+                    <small>One Acre Fund</small>
                   </div>
                 </div>
                 <div class="story-metrics">
                   <div class="metric">
-                    <span class="metric-value">45%</span>
-                    <span class="metric-label">Cost Reduction</span>
+                    <span class="metric-value">95%</span>
+                    <span class="metric-label">Data Accuracy</span>
                   </div>
                   <div class="metric">
-                    <span class="metric-value">3x</span>
-                    <span class="metric-label">Speed Increase</span>
+                    <span class="metric-value">35%</span>
+                    <span class="metric-label">Error Reduction</span>
                   </div>
                 </div>
               </div>
@@ -283,7 +287,7 @@
               <div class="consultation-form">
                 <div class="form-header">
                   <h4>Schedule Consultation</h4>
-                  <p>Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui.</p>
+                  <p>Ready to transform your agricultural data into actionable insights? Let's discuss your MEL and analytics needs.</p>
                 </div>
 
                 <form action="forms/consultation.php" method="post" class="php-email-form">
@@ -299,10 +303,21 @@
                     <input type="tel" name="phone" class="form-input" placeholder="Phone Number">
                   </div>
 
-                  <input type="hidden" name="subject" value="Business Process Optimization Consultation">
+                  <div class="form-group">
+                    <select name="service-type" class="form-input" required="">
+                      <option value="">Select Service Type</option>
+                      <option value="mel-framework">MEL Framework Development</option>
+                      <option value="dashboard-creation">Power BI Dashboard Creation</option>
+                      <option value="data-analysis">Quantitative Data Analysis</option>
+                      <option value="training">Team Training & Capacity Building</option>
+                      <option value="consulting">Agricultural Data Consulting</option>
+                    </select>
+                  </div>
+
+                  <input type="hidden" name="subject" value="Agricultural Data Analytics & MEL Consulting">
 
                   <div class="form-group">
-                    <textarea name="message" class="form-input" rows="4" placeholder="Tell us about your current challenges and goals..." required=""></textarea>
+                    <textarea name="message" class="form-input" rows="4" placeholder="Tell us about your agricultural data challenges or MEL needs..." required=""></textarea>
                   </div>
 
                   <div class="loading">Loading</div>
@@ -337,14 +352,14 @@
         <a href=""><i class="bi bi-twitter-x"></i></a>
         <a href=""><i class="bi bi-facebook"></i></a>
         <a href=""><i class="bi bi-instagram"></i></a>
-        <a href=""><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/reagan-ochola-aba10927"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
+        <!-- Licensing information: https://bootstrapmade.com/license/  -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by <a href="https://bootstrapmade.com/ ">BootstrapMade</a>
       </div>
     </div>
 
