--- a/services.html
+++ b/services.html
@@ -4,18 +4,18 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Services - FolioOne Bootstrap Template</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <title>Services - Reagan Ochola | Data Analytics & MEL Specialist</title>
+  <meta name="description" content="Professional services offered by Reagan Ochola - Data Analytics & MEL Specialist specializing in agricultural data, Power BI dashboards, and quantitative analysis for development organizations.">
+  <meta name="keywords" content="MEL Services, Data Analytics, Agriculture, Power BI, SQL, Consulting, Kenya, East Africa">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
-  <link href="https://fonts.googleapis.com" rel="preconnect">
-  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com " rel="preconnect">
+  <link href="https://fonts.gstatic.com " rel="preconnect" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital ,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -29,10 +29,10 @@
 
   <!-- =======================================================
   * Template Name: FolioOne
-  * Template URL: https://bootstrapmade.com/folioone-bootstrap-portfolio-website-template/
+  * Template URL: https://bootstrapmade.com/folioone-bootstrap-portfolio-website-template/ 
   * Updated: Aug 23 2025 with Bootstrap v5.3.7
   * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
+  * License: https://bootstrapmade.com/license/ 
   ======================================================== -->
 </head>
 
@@ -79,7 +79,7 @@
         <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
         <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
         <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/reagan-ochola-aba10927" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
 
     </div>
@@ -93,7 +93,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Services</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium totam rem aperiam</p>
+        <p>Comprehensive data analytics and MEL consulting services designed to transform agricultural operations and improve farmer outcomes across East Africa.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -103,11 +103,11 @@
           <div class="col-md-6" data-aos="fade-right" data-aos-delay="100">
             <div class="service-item">
               <div class="service-icon">
-                <i class="bi bi-code-slash"></i>
+                <i class="bi bi-graph-up"></i>
               </div>
               <div class="service-content">
-                <h3>Custom Web Development</h3>
-                <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Nulla quis lorem ut libero malesuada feugiat. Curabitur non nulla sit amet nisl tempus convallis. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <h3>Agricultural Data Analytics</h3>
+                <p>Transform raw field data into actionable insights that improve farmer outcomes. Comprehensive analysis of crop performance, adoption rates, and program effectiveness using advanced statistical methods and visualization techniques.</p>
                 <a href="service-details.html" class="service-link">
                   <span>Learn More</span>
                   <i class="bi bi-arrow-right"></i>
@@ -119,11 +119,11 @@
           <div class="col-md-6" data-aos="fade-left" data-aos-delay="100">
             <div class="service-item">
               <div class="service-icon">
-                <i class="bi bi-phone-fill"></i>
+                <i class="bi bi-speedometer2"></i>
               </div>
               <div class="service-content">
-                <h3>Mobile App Solutions</h3>
-                <p>Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Vivamus magna justo, lacinia eget consectetur sed. Quisque velit nisi, pretium ut lacinia in, elementum id enim. Donec rutrum congue leo eget malesuada.</p>
+                <h3>Power BI Dashboard Development</h3>
+                <p>Create interactive, real-time dashboards for monitoring farmer performance, crop adoption, and program outcomes. Custom visualization solutions that enable data-driven decision making at all organizational levels.</p>
                 <a href="service-details.html" class="service-link">
                   <span>Learn More</span>
                   <i class="bi bi-arrow-right"></i>
@@ -135,11 +135,11 @@
           <div class="col-md-6" data-aos="fade-right" data-aos-delay="200">
             <div class="service-item">
               <div class="service-icon">
-                <i class="bi bi-palette2"></i>
+                <i class="bi bi-clipboard-data"></i>
               </div>
               <div class="service-content">
-                <h3>UI/UX Design</h3>
-                <p>Pellentesque in ipsum id orci porta dapibus. Proin eget tortor risus. Vivamus suscipit tortor eget felis porttitor volutpat. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui.</p>
+                <h3>MEL Framework Development</h3>
+                <p>Design and implement comprehensive Monitoring, Evaluation & Learning frameworks tailored to agricultural programs. Establish quality control systems, data validation processes, and performance indicators that reduce survey errors by up to 35%.</p>
                 <a href="service-details.html" class="service-link">
                   <span>Learn More</span>
                   <i class="bi bi-arrow-right"></i>
@@ -151,11 +151,11 @@
           <div class="col-md-6" data-aos="fade-left" data-aos-delay="200">
             <div class="service-item">
               <div class="service-icon">
-                <i class="bi bi-bar-chart-line"></i>
+                <i class="bi bi-people"></i>
               </div>
               <div class="service-content">
-                <h3>Digital Marketing</h3>
-                <p>Donec rutrum congue leo eget malesuada. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Nulla porttitor accumsan tincidunt. Curabitur aliquet quam id dui posuere blandit.</p>
+                <h3>Field Data Management</h3>
+                <p>Lead large-scale field data collection operations with teams of 50+ staff across diverse agricultural regions. Ensure >95% data accuracy through robust training programs, quality assurance protocols, and real-time monitoring systems.</p>
                 <a href="service-details.html" class="service-link">
                   <span>Learn More</span>
                   <i class="bi bi-arrow-right"></i>
@@ -167,11 +167,11 @@
           <div class="col-md-6" data-aos="fade-right" data-aos-delay="300">
             <div class="service-item">
               <div class="service-icon">
-                <i class="bi bi-cloud-check"></i>
+                <i class="bi bi-calculator"></i>
               </div>
               <div class="service-content">
-                <h3>Cloud Computing</h3>
-                <p>Curabitur aliquet quam id dui posuere blandit. Sed porttitor lectus nibh. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Nulla quis lorem ut libero malesuada feugiat.</p>
+                <h3>Quantitative Research & Analysis</h3>
+                <p>Conduct comprehensive quantitative analysis of agricultural data, including MSME manufacturing studies, employment patterns, and training effectiveness assessments. Expertise in statistical analysis using Python, SQL, and advanced Excel.</p>
                 <a href="service-details.html" class="service-link">
                   <span>Learn More</span>
                   <i class="bi bi-arrow-right"></i>
@@ -183,11 +183,11 @@
           <div class="col-md-6" data-aos="fade-left" data-aos-delay="300">
             <div class="service-item">
               <div class="service-icon">
-                <i class="bi bi-shield-lock"></i>
+                <i class="bi bi-mortarboard"></i>
               </div>
               <div class="service-content">
-                <h3>Cybersecurity Solutions</h3>
-                <p>Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Donec sollicitudin molestie malesuada. Curabitur arcu erat, accumsan id imperdiet et. Proin eget tortor risus.</p>
+                <h3>Training & Capacity Building</h3>
+                <p>Mentor teams on advanced data tools including Power BI, SQL, and Excel for sustainable data-driven decision making. Build internal capacity for MEL operations, dashboard interpretation, and agricultural data analysis techniques.</p>
                 <a href="service-details.html" class="service-link">
                   <span>Learn More</span>
                   <i class="bi bi-arrow-right"></i>
@@ -214,14 +214,14 @@
         <a href=""><i class="bi bi-twitter-x"></i></a>
         <a href=""><i class="bi bi-facebook"></i></a>
         <a href=""><i class="bi bi-instagram"></i></a>
-        <a href=""><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/reagan-ochola-aba10927"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
+        <!-- Licensing information: https://bootstrapmade.com/license/  -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by <a href="https://bootstrapmade.com/ ">BootstrapMade</a>
       </div>
     </div>
 
