--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Portfolio Details - Reagan Ochola</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <title>Portfolio Details - Reagan Ochola | Strategic MEL Leader & Data Analytics Specialist</title>
+  <meta name="description" content="Portfolio details of Reagan Ochola's MEL quantitative case study - comprehensive analysis of 5,016 MSME manufacturing firms across Kenya using Power BI, SQL, and Python.">
+  <meta name="keywords" content="MEL, Data Analytics, Power BI, SQL, Python, MSME, Kenya, Quantitative Analysis, Portfolio, Reagan Ochola">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -29,10 +29,10 @@
 
   <!-- =======================================================
   * Template Name: FolioOne
-  * Template URL: https://bootstrapmade.com/folioone-bootstrap-portfolio-website-template/ 
+  * Template URL: https://bootstrapmade.com/folioone-bootstrap-portfolio-website-template/   
   * Updated: Aug 23 2025 with Bootstrap v5.3.7
   * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/ 
+  * License: https://bootstrapmade.com/license/   
   ======================================================== -->
 </head>
 
@@ -40,11 +40,6 @@
 
   <header id="header" class="header d-flex align-items-center light-background sticky-top">
     <div class="container position-relative d-flex align-items-center justify-content-between">
-
-      <!-- <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
-      <img src="assets/img/logo.webp" alt="">
-      <h1 class="sitename">FolioOne</h1> 
-    </a> -->
 
       <nav id="navmenu" class="navmenu">
         <ul>
@@ -129,34 +124,35 @@
                   </script>
                   <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                      <img src="assets/img/portfolio/portfolio-5.webp" alt="MSME Manufacturing Dashboard" class="img-fluid">
+                      <div class="text-center p-5 bg-light rounded-3 d-flex align-items-center justify-content-center" style="min-height: 400px;">
+                        <div>
+                          <i class="bi bi-graph-up text-primary fs-1 mb-3"></i>
+                          <h4 class="text-dark">MSME Manufacturing Dashboard</h4>
+                          <p class="text-muted">Interactive Power BI visualization</p>
+                        </div>
+                      </div>
                     </div>
                     <div class="swiper-slide">
-                      <img src="assets/img/portfolio/portfolio-7.webp" alt="Employment Analysis Chart" class="img-fluid">
+                      <div class="text-center p-5 bg-light rounded-3 d-flex align-items-center justify-content-center" style="min-height: 400px;">
+                        <div>
+                          <i class="bi bi-bar-chart-line text-success fs-1 mb-3"></i>
+                          <h4 class="text-dark">Employment Analysis Chart</h4>
+                          <p class="text-muted">11,277 jobs across 5,016 firms</p>
+                        </div>
+                      </div>
                     </div>
                     <div class="swiper-slide">
-                      <img src="assets/img/portfolio/portfolio-8.webp" alt="Gender Equity Analysis" class="img-fluid">
+                      <div class="text-center p-5 bg-light rounded-3 d-flex align-items-center justify-content-center" style="min-height: 400px;">
+                        <div>
+                          <i class="bi bi-gender-ambiguous text-info fs-1 mb-3"></i>
+                          <h4 class="text-dark">Gender Equity Analysis</h4>
+                          <p class="text-muted">39.8% female-owned employment</p>
+                        </div>
+                      </div>
                     </div>
                   </div>
                   <div class="swiper-button-prev"></div>
                   <div class="swiper-button-next"></div>
-                </div>
-              </div>
-
-              <div class="thumbnail-grid" data-aos="fade-up" data-aos-delay="200">
-                <div class="row g-2 mt-3">
-                  <div class="col-3">
-                    <img src="assets/img/portfolio/portfolio-4.webp" alt="Data Cleaning Process" class="img-fluid glightbox">
-                  </div>
-                  <div class="col-3">
-                    <img src="assets/img/portfolio/portfolio-6.webp" alt="Training Effectiveness" class="img-fluid glightbox">
-                  </div>
-                  <div class="col-3">
-                    <img src="assets/img/portfolio/portfolio-11.webp" alt="Sector Analysis" class="img-fluid glightbox">
-                  </div>
-                  <div class="col-3">
-                    <img src="assets/img/portfolio/portfolio-12.webp" alt="Power BI Dashboard" class="img-fluid glightbox">
-                  </div>
                 </div>
               </div>
 
@@ -262,9 +258,28 @@
                 </div>
               </div>
 
+              <!-- GitHub Repositories Links -->
+              <div class="project-repositories mt-4" data-aos="fade-up" data-aos-delay="500">
+                <h4><i class="bi bi-github"></i> Related Projects</h4>
+                <div class="repo-links">
+                  <a href="https://github.com/Ocholar/AgroDashboard" target="_blank" class="repo-link">
+                    <i class="bi bi-box-arrow-up-right"></i> AgroDashboard - Plotly Dash Visualization
+                  </a>
+                  <a href="https://github.com/Ocholar/East_Africa_Maize_Yield_Insights" target="_blank" class="repo-link">
+                    <i class="bi bi-box-arrow-up-right"></i> East Africa Maize Yield Insights
+                  </a>
+                  <a href="https://github.com/Ocholar/AgroImageryTimeline" target="_blank" class="repo-link">
+                    <i class="bi bi-box-arrow-up-right"></i> AgroImageryTimeline - SQL + Python Analysis
+                  </a>
+                  <a href="https://github.com/Ocholar/Financial-Pricing-Model-Analysis" target="_blank" class="repo-link">
+                    <i class="bi bi-box-arrow-up-right"></i> Financial Pricing Model Analysis
+                  </a>
+                </div>
+              </div>
+
               <div class="cta-buttons" data-aos="fade-up" data-aos-delay="400">
-                <a href="https://github.com/Ocholar/mel-case-study-kenya" class="btn-view-project">View Full Analysis</a>
-                <a href="portfolio.html" class="btn-next-project">Next Project <i class="bi bi-arrow-right"></i></a>
+                <a href="https://github.com/Ocholar/mel-case-study-kenya" class="btn-view-project" target="_blank">View Full Analysis</a>
+                <a href="https://github.com/Ocholar" class="btn-next-project" target="_blank">All Projects <i class="bi bi-arrow-right"></i></a>
               </div>
             </div>
           </div>
@@ -291,9 +306,9 @@
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/  -->
+        <!-- Licensing information: https://bootstrapmade.com/license/   -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/ ">BootstrapMade</a>
+        Designed by <a href="https://bootstrapmade.com/  ">BootstrapMade</a>
       </div>
     </div>
 
